k8s/donation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-service
  namespace: production
  labels:
    app: donation-service
    project: solidary-tech
spec:
  replicas: 3
  selector:
    matchLabels:
      app: donation-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
        otel.com/collect: "true"
        admission.datadoghq.com/js.inject: "true"
      labels:
        app: donation-service
    spec:
      containers:
      - name: donation-service
        image: 396368123600.dkr.ecr.us-east-1.amazonaws.com/donation-service:latest
        
        # Injeta automaticamente as variáveis: DB_HOST, DB_PORT, DB_NAME, DB_USER, DB_PASS
        ports:
        - name: http
          containerPort: 3000

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: production
  labels:
    app: donation-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: donation-service
