k8s/ngo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngo-service
  namespace: default
  labels:
    app: ngo-service
    project: solidary-tech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngo-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
        otel.com/collect: "true"
      labels:
        app: ngo-service
    spec:
      containers:
      - name: ngo-service
        image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/ngo-service:latest
        
        # Injeta automaticamente as variáveis do banco (DB_HOST, DB_PORT, DB_NAME, DB_USER, DB_PASS)
        ports:
        - name: http
          containerPort: 3000

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: ngo-service
  namespace: default
  labels:
    app: ngo-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: ngo-service
