k8s/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:latest
        volumeMounts:
        - name: collector-config-vol
          mountPath: /etc/otelcol-contrib
      volumes:
      - name: collector-config-vol
        configMap:
          name: otel-collector-config
          items:
          - key: config.yaml      # Pega a chave do ConfigMap
            path: config.yaml     # Força a criação do arquivo com este nome exato
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: production
spec:
  type: ClusterIP
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: otel-collector
