k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-isolation-policy
  namespace: production
  labels:
    project: solidary-tech
spec:
  podSelector: {} # Aplica-se a TODOS os pods do namespace production
  policyTypes:
  - Ingress
  ingress:
  # 1. Permite comunicação cruzada entre as próprias APIs do ecossistema (Portas de Service e Pod)
  - from:
    - podSelector:
        matchLabels:
          app: donation-service
    - podSelector:
        matchLabels:
          app: ngo-service
    - podSelector:
        matchLabels:
          app: volunteer-service
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 5000

  # 2. LIBERAÇÃO SRE: Permite que o OpenTelemetry Collector acesse as APIs para coletar métricas
  - from:
    - podSelector:
        matchLabels:
          app: otel-collector
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 5000
